[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rca-echo-tools"
version = "0.1.0"
description = "echosounder harvest and viz tools"
authors = [
  { name = "Joe Duprey", email = "jduprey@uw.edu" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "echopype>=0.10.0",
  "xarray>=2024.11.0",
  "fsspec>2024.10.0",
  "requests",
  "s3fs>2024.6.0",
  "loguru",
  "tqdm",
  "xarray",
  "zarr>=2,<3",
  "prefect>3.0.3",
  "prefect-aws",
  "pydantic>2",
  "pydantic-settings"
]

[project.scripts]

[tool.ruff]
line-length = 95