[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rca-echo-tools"
version = "0.1.0"
description = "echosounder harvest and viz tools"
authors = [
  { name = "Joe Duprey", email = "jduprey@uw.edu" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
  "echopype>=0.10.0",
  "xarray>=2024.11.0",
  "fsspec>2024.10.0",
  "requests",
  "s3fs>2024.6.0",
  "loguru",
  "zarr>=2,<3",
  "prefect<3,>=2.5",
  "prefect-aws",
]

[project.scripts]
rca-echo-harvest = "rca_echo_tools.pipeline:run_echo_raw_data_harvest"

[tool.ruff]
line-length = 95